2008-01-27 [paul]	3.2.0cvs68

	* po/en_GB.po
		updated
	* src/prefs_actions.c
	* src/prefs_filtering.c
	* src/prefs_folder_item.c
	* src/prefs_template.c
	* src/gtk/about.c
		some minor changes to the English

2008-01-24 [colin]	3.2.0cvs67

	* src/etpan/imap-thread.c
	* src/etpan/nntp-thread.c
		Fix bug 1348, 'Hang ups at exit time with 
		pgp plugin since 3.0.2'

2008-01-23 [colin]	3.2.0cvs66

	* src/toolbar.c
		Fix translation of something that shouldn't be

2008-01-23 [colin]	3.2.0cvs65

	* src/procmime.c
		Fix bug 1486, 'Re: Incorrect content when replying'
		Revert to full scan if short scan found only 0-length
		text parts

2008-01-23 [paul]	3.2.0cvs64

	* src/prefs_folder_item.c
		fix bug 1485, 'selecting a folder's default
		account if name contains '&''

2008-01-23 [colin]	3.2.0cvs63

	* src/folder.c
	* src/folder.h
	* src/main.c
	* src/mainwindow.c
		Fix bug 1480, 'should be able to display mail file
		from command line'. Let 'claws-mail --select' accept
		absolute paths in addition to folder identifiers.

2008-01-22 [wwp]	3.2.0cvs62

	* src/account.c
	* src/account.h
	* src/compose.c
	* src/messageview.c
	* src/summaryview.c
	* src/common/utils.c
	* src/common/utils.h
		Allow from=address in mailto sequence:
		  --compose 'recipient@foo.bar?from=i-sent-spam@foo.bar&subject=enlarge-your-ahum&body=body-body'
		  The 'from' will try to select the first account matching in accounts list,
		  otherwise will use the usual account selection mechanism but override with
		  this 'from' address.
		Allow mailto with NNTP accounts
		  mailto is now possible w/ NNTP account - if mailto is used when a NNTP account
		  is the default one or if a NNTP account address is used with 'from'.
		  This is more or less a bugfix as it was possible to use mailto with a NNTP
		  default account but the complete mailto sequence was put in To.

2008-01-22 [wwp]	3.2.0cvs61

	* doc/man/claws-mail.1
		Updated the man page: status of few features, command-line