@@ -3205,3 +3205,4 @@
 ( cvs diff -u -r 1.43.2.94 -r 1.43.2.95 src/toolbar.c;  ) > 3.2.0cvs66.patchset
 ( cvs diff -u -r 1.1.4.95 -r 1.1.4.96 src/etpan/imap-thread.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/etpan/nntp-thread.c;  ) > 3.2.0cvs67.patchset
 ( cvs diff -u -r 1.12.2.16 -r 1.12.2.17 po/en_GB.po;  cvs diff -u -r 1.60.2.55 -r 1.60.2.56 src/prefs_actions.c;  cvs diff -u -r 1.59.2.64 -r 1.59.2.65 src/prefs_filtering.c;  cvs diff -u -r 1.52.2.56 -r 1.52.2.57 src/prefs_folder_item.c;  cvs diff -u -r 1.12.2.54 -r 1.12.2.55 src/prefs_template.c;  cvs diff -u -r 1.4.2.58 -r 1.4.2.59 src/gtk/about.c;  ) > 3.2.0cvs68.patchset
+( cvs diff -u -r 1.382.2.433 -r 1.382.2.434 src/compose.c;  cvs diff -u -r 1.12.2.55 -r 1.12.2.56 src/prefs_template.c;  cvs diff -u -r 1.1.16.7 -r 1.1.16.8 src/prefs_template.h;  cvs diff -u -r 1.8.2.26 -r 1.8.2.27 src/quote_fmt.c;  cvs diff -u -r 1.5.12.13 -r 1.5.12.14 src/quote_fmt.h;  cvs diff -u -r 1.8.2.16 -r 1.8.2.17 src/quote_fmt_lex.l;  cvs diff -u -r 1.22.2.38 -r 1.22.2.39 src/quote_fmt_parse.y;  ) > 3.2.0cvs69.patchset
