@@ -17,11 +17,13 @@ gint quote_fmt_get_line(void);
 void quote_fmt_init(MsgInfo *info, const gchar *my_quote_str,
 		    const gchar *my_body, gboolean my_dry_run,
 			PrefsAccount *account,
+			gboolean escaped_string,
 			GtkAspell *gtkaspell);
 #else
 void quote_fmt_init(MsgInfo *info, const gchar *my_quote_str,
 		    const gchar *my_body, gboolean my_dry_run,
-			PrefsAccount *account);
+			PrefsAccount *account,
+			gboolean escaped_string);
 #endif
 gint quote_fmtparse(void);
 void quote_fmt_scan_string(const gchar *str);
